---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/sanity_check_100.sql
snapshot_kind: text
---
VACUUM;

SELECT
  relname,
  nspname
FROM
  pg_class AS c
  LEFT OUTER JOIN pg_namespace AS n
  ON n.oid = relnamespace
  INNER JOIN pg_attribute AS a
  ON attrelid = c.oid AND attname = 'oid'
WHERE
  relkind = 'r' AND
  c.oid < 16384 AND
  nspname ~ '^pg_' IS NOT FALSE AND
  NOT EXISTS (SELECT
    1
  FROM
    pg_index AS i
  WHERE
    indrelid = c.oid AND
    indkey[0] = a.attnum AND
    indnatts = 1 AND
    indisunique AND
    indimmediate);

SELECT
  relname,
  relkind
FROM
  pg_class
WHERE
  relkind IN ('v', 'c', 'f', 'p', 'I') AND
  relfilenode <> 0;
